# pnu-notice-agent-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: deploy-web.yml  monitor-service-health.yml  process-feed-events.yml  process-watch-requests.yml  smtp-smoke-test.yml
docs/: ai-notice-analysis-architecture-decision.md  content-resolver-decision.md  gemini-public-feed-decision.md  gemini-scheduled-action-queue-decision.md  jules-cloud-analysis-decision.md  local-alerting-state-decision.md  watch-profile-matcher-decision.md
evaluation/: ai_quality_cases.json  watch_gate_cases.json  watch_gate_report.json
examples/watches/: summer-2026-database-001-cancelled.json
pnu_event_gate/: __init__.py  ai.py  analysis.py  backtest.py  cli.py  content.py  delivery.py  events.py  evidence.py  gemini.py  matcher.py  monitoring.py  nvidia.py  profiles.py  scan.py  state.py  store.py  watch_requests.py  worker.py
scripts/: evaluate_ai_flow.py  evaluate_watch_gate.py
supabase/: config.toml
supabase/migrations/: 20260720072838_create_watch_requests.sql  20260720081352_operational_web_app.sql  20260721045203_index_user_notifications_watch_request.sql  (+1 more)
tests/: test_ai_analysis.py  test_ai_cli.py  test_content_resolver.py  test_delivery.py  test_e2e_alert_flow.py  test_event_gate.py  test_evidence.py  test_example_profiles.py  test_gemini.py  test_monitoring.py  test_nvidia.py  test_scan_runtime.py  test_watch_requests.py  test_worker.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css  supabase.ts
(+1 files in other folders)
