[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pnu-notice-agent-tools"
version = "0.1.0"
description = "Local agent tools for PNU Public Notice Feed events"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "lofidonut3" }
]
dependencies = []

[project.scripts]
pnu-notice = "pnu_event_gate.cli:main"
pnu-event-gate = "pnu_event_gate.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
include = ["pnu_event_gate*"]
